--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -402,7 +402,7 @@
     z-index: 0; 
 }
 
-.seccion-video{
+.seccion_video{
     background: #131212;
 }
 
@@ -440,3 +440,70 @@
     font-size: 30px;
     padding-bottom: 15px;
 }
+
+
+@media only screen and (max-width: 767px) {
+    .seccion_video {
+        flex-direction: column;
+    }
+    .video {
+        width: 100%;
+    }
+    .yt {
+        position: relative;
+        padding-top: 56.25%; 
+        height: 0;
+    }
+    .yt iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+
+@media only screen and (min-width: 768px) {
+    .seccion_video {
+        display: flex;
+        align-items: flex-start;
+    }
+    .video {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    .yt {
+        padding-top: 0;
+        height: auto;
+    }
+    .yt iframe {
+        width: 100%;
+        height: 315px;
+    }
+}
+
+
+@media only screen and (max-width: 767px) {
+    .video {
+        display: flex;
+        flex-direction: column;
+        margin-top: 20px;
+    }
+    .yt.container {
+        margin-bottom: 20px; 
+    }
+    .information {
+        margin-top: 20px;
+    }
+    .informacion h2 {
+        margin-top: 0; 
+    } 
+
+    .fondo_detalle{
+        height: 120vh;
+    }
+}
+
+
+
